[project]
name = "paralo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model"]

[tool.pytest.ini_options]
testpaths = ["tests"]